--- a/oneM2MTester/TestingView.ejs
+++ b/oneM2MTester/TestingView.ejs
@@ -1,3 +1,8 @@
+<!--
+* Created by HwangJaeYoung
+* forest62590@gmail.com
+-->
+
 <!DOCTYPE html>
 
 <html>
@@ -143,6 +148,90 @@
         window.headerCount = 0;
 
         $(function () {
+            // Request to specific server
+            $('#request').click(function() {
+                if (idValue != 0) {
+                    // Collecting the information to send a data to server
+                    var urlInformation = $('#setURL').val(); // Getting the url information
+                    var methodInformation = $('#methodList :selected').text(); // Getting the method information
+                    var bodyInformation = $("#bodyText").val(); // Getting the body information
+                    var headerNameList = $('.headerName'); // Getting the header name list
+                    var headerValueList = $('.headerValue'); // Getting the header value list
+
+                    // Formatting the JSON Object
+                    var jsonObject = new Object();
+                    var jsonArray = new Array();
+
+                    jsonObject.requestInfo = new Object();
+
+                    jsonObject.requestInfo.resourceName = idValue;
+                    jsonObject.requestInfo.urlInformation = urlInformation;
+                    jsonObject.requestInfo.methodInformation = methodInformation;
+                    jsonObject.requestInfo.bodyInformation = bodyInformation;
+
+                    // Creating the JSONArray to save the request information
+                    for (var i = 0; i < headerNameList.length; i++) {
+                        var headerName = headerNameList[i].value;
+                        var headerValue = headerValueList[i].value;
+
+                        var tempObject = new Object();
+                        tempObject.headerName = headerName;
+                        tempObject.headerValue = headerValue;
+
+                        jsonArray.push(tempObject);
+                    }
+                    jsonObject.requestInfo.headerInformation = jsonArray;
+
+                    // Setting the url based on method
+                    var requestURL = '';
+
+                    if(methodInformation == "GET")
+                        requestURL = "getResource" + "/" + idValue;
+                    else if(methodInformation == "POST")
+                        requestURL = "createResource" + "/" + idValue;
+                    else if(methodInformation == "PUT")
+                        requestURL = "updateResource" + "/" + idValue;
+                    else if(methodInformation == "DELETE")
+                        requestURL = "delResource" + "/" + idValue;
+
+                    // GET and DELETE are not use a body information.
+                    if(methodInformation == "GET" || methodInformation == "DELETE") {
+                        $.ajax({
+                            url: "http://127.0.0.1:62590/" + requestURL,
+                            type: methodInformation,
+                            dataType: "json",
+                            cache: false,
+                            timeout: 30000,
+                            data: JSON.stringify(jsonObject),
+                            contentType: "application/json",
+                            success: function (data) {
+                                alert("test sending function");
+                            },
+                            error: function (xhr, textStatus, errorThrown) {
+                                alert(textStatus + ' : ' + errorThrown);
+                            }
+                        });
+                    } else if(methodInformation == "POST" || methodInformation == "PUT") {
+                        $.ajax({
+                            url: "http://127.0.0.1:62590/" + requestURL,
+                            type: methodInformation,
+                            dataType: "json",
+                            cache: false,
+                            timeout: 30000,
+                            data: JSON.stringify(jsonObject),
+                            contentType: "application/json",
+                            success: function (data) {
+                                alert("test sending function");
+                            },
+                            error: function (xhr, textStatus, errorThrown) {
+                                alert(textStatus + ' : ' + errorThrown);
+                            }
+                        });
+                    }
+                } else {
+                    alert("You are not selecting the specific resource list!!");
+                }
+            });
 
             // Saving the all request information
             $('#saveButton').click(function () {
@@ -325,6 +414,8 @@
                         var methodInformation = resultObject['methodInformation'];
                         var bodyInformation = resultObject['bodyInformation'];
                         var headerInformation = resultObject['headerInformation'];
+
+                        $('#headerElement').empty(); headerCount = 0; // Initialize the header format
 
                         for(var i = 0; i < headerInformation.length; i++) {
                             if(headerInformation[i] != null) {
